--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>Hi there</title>
 </head>
 <body>
-  This is a page
-  a simple page
+  <p>My name: Farhad Sotothe </p>
+  <p>My Project: I'm gonna build a personal website which contains several parts such as "About me", "Articles", "Bolg", "Portfolio", ...</p>
+  <p>Homework: </p>
 </body>
 </html>
