--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hi there</title>
+  <title>Farhad Sotothe</title>
 </head>
 <body>
   <p>My name: Farhad Sotothe </p>
-  <p>My Project: I'm gonna build a personal website which contains several parts such as "About me", "Articles", "Bolg", "Portfolio", ...</p>
+  <p>My Project: I'm gonna build a personal website which contains several parts such as "About me", "Articles", "Bolg", "Portfolio", etc.</p>
   <p>Homework: </p>
 </body>
 </html>
