--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
   <p>My name: Farhad Sotothe </p>
   <p>My Project: I'm gonna build a personal website which contains several parts such as "About me", "Articles", "Bolg", "Portfolio", etc.</p>
-  <p>Homework 1: </p>
+  <a href="http://sotothe.github.io/homework/01.html">Homework 1</a> 
 </body>
 </html>
