--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Farhad Sotothe</title>
+<style>
+#header {
+    background-color:#033649;
+    color:white;
+    text-align:center;
+    padding:5px;
+}
+#nav {
+    line-height:30px;
+    background-color:#eeeeee;
+    height:300px;
+    width:150px;
+    float:left;
+    padding:5px;        
+}
+#section {
+    width:350px;
+    float:left;
+    padding:10px;      
+}
+#footer {
+    background-color:#033649;
+    color:white;
+    clear:both;
+    text-align:center;
+   padding:5px;      
+}
+</style>
 </head>
 <body>
-  <p>My name: Farhad Sotothe </p>
-  <p>My Project: I'm gonna build a personal website which contains several parts such as "About me", "Articles", "Bolg", "Portfolio", etc.</p>
-  <a href="http://sotothe.github.io/homeworks/01.html">Homework 1</a> 
+
+<div id="header">
+<h1>Farhad Sotothe</h1>
+</div>
+
+<div id="nav">
+Project<br>
+<a href="http://sotothe.github.io/homeworks/01.html">Homework 1</a>
+</div>
+
+<div id="section">
+<h2>My Project</h2>
+<p>I'm gonna build a personal website which contains several parts such as "About me", "Articles", "Bolg", "Portfolio", etc.</p>
+</div>
+
+<div id="footer">
+© 2016. Farhad Sotothe. 
+</div>
+
 </body>
 </html>
