--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ color: #031634;
 <body>
 <div class="sidebar">
 <div class="sidebar-inner">
+<img src="https://cloud.githubusercontent.com/assets/17006345/13530026/82fdce26-e234-11e5-9096-1d4c80c1b0c5.jpg" style="height:90px; padding-bottom:10px;">
 <h1 class="name">Farhad</h1>
 <h1 class="surname">Sotothe</h1>
 <p class="side-p">Student of Wide Area Networks at the Jahad Daneshgahi of Mashhad</p>
