Mr Hyde was here …

--- a/404.html
+++ b/404.html
@@ -31,8 +31,8 @@
     <header class="masthead">
       <div class="masthead-inner">
 			 <div class="img-circular"></div>
-        <h1>Alex Singleton</h1>
-        <p class="lead">is a Reader in Geographic Information Science at the University of Liverpool</p>
+        <h1>Farhad Sotothe</h1>
+        <p class="lead">Student of Computer Science at Jahad Daneshgahi university of Mashhad</p>
 
         <div class="colophon">
           <ul class="colophon-links">
@@ -52,8 +52,7 @@
               <a href="/contact/">Contact</a>
             </li>
           </ul>
-          <p>&copy; 2014. Alex Singleton All rights reserved. Template based on <a href="https://github.com/mdo/hyde/">Hyde</a> for <a hfref="http://jekyllrb.com">Jekyll</a>. View my <a href ="https://github.com/alexsingleton/alexsingleton.github.io">code</a>.</p>
-          <a href="http://uk.linkedin.com/in/alexdsingleton"><img class="img-feed" src="/public/images/iconmonstr-linkedin-3-icon.svg"></img></a><a href="/atom.xml"><img class="img-feed" src="/public/images/iconmonstr-rss-3-icon.svg"></a></img><a href="https://twitter.com/alexsingleton"><img class="img-feed" src="/public/images/iconmonstr-twitter-3-icon.svg"></img></a>
+          <p>&copy; 2016. Farhad Sotothe All rights reserved.
         </div>
       </div>
     </header>
