Mr Hyde was here …

--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
       <div class="masthead-inner">
 			 <div class="img-circular"></div>
         <h1>Farhad Sotothe</h1>
-        <p class="lead">Student of Computer Science at Jahad Daneshgahi university of Mashhad</p>
+        <p class="lead">Student of Computer Science at Iranian academic center for education, culture and research, Mashhad</p>
 
         <div class="colophon">
           <ul class="colophon-links">
