--- a/404.html
+++ b/404.html
@@ -29,6 +29,10 @@
   <body class="theme-base-alex">
 
     <header class="masthead">
+      <div class="masthead-lang">
+	   <p>English/<a href="//sotothe.github.io/fa/">Persian</a></p> <!-- http: -->
+      </div>
+	    
       <div class="masthead-inner">
 			 <div class="img-circular"></div>
         <h1>Farhad Sotothe</h1>
@@ -52,7 +56,7 @@
               <a href="/contact/">Contact</a>
             </li>
           </ul>
-          <p>&copy; 2016. Farhad Sotothe All rights reserved.
+          <p>&copy; Farhad Sotothe All rights reserved.
         </div>
       </div>
     </header>
